enter table data

--- a/index.html
+++ b/index.html
@@ -80,8 +80,13 @@
 <!-- heading -->
 <h1>headind1</h1>
 <!-- comment -->
-
-
+<!-- table use -->
+<table>
+  <tr>Name</tr>
+  <td>
+    kashif
+  </td>
+</table>
 
 </body>
 </html>
